[gd_scene load_steps=19 format=2]

[ext_resource path="res://Cenas/Scripts/TelaGameOver.gd" type="Script" id=1]
[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/botao_verde_normal.png" type="Texture" id=4]
[ext_resource path="res://Sons/hover.wav" type="AudioStream" id=5]
[ext_resource path="res://Sons/confirmacao.wav" type="AudioStream" id=6]
[ext_resource path="res://Sprites/botao_verde2.png" type="Texture" id=7]
[ext_resource path="res://Telas/FundoTela2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/botao_verde1.png" type="BitMap" id=9]
[ext_resource path="res://Cenas/Transicao.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets2/IconsUI/contorno.png" type="Texture" id=11]
[ext_resource path="res://Assets2/IconsUI/grade.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 42
font_data = ExtResource( 2 )

[node name="tela_gameover" type="Node2D"]
script = ExtResource( 1 )

[node name="Transicao" parent="." instance=ExtResource( 10 )]
layer = 0

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 640, 360.982 )
scale = Vector2( 6.666, 6.68485 )
texture = ExtResource( 8 )

[node name="restart" type="TextureButton" parent="."]
margin_left = 776.0
margin_top = 232.0
margin_right = 1442.0
margin_bottom = 367.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 7 )
texture_click_mask = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="RESTART" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 792.0
margin_top = 240.0
margin_right = 1232.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 2 )
text = "Recomeçar"
align = 1
valign = 1

[node name="menu" type="TextureButton" parent="."]
margin_left = 776.0
margin_top = 360.0
margin_right = 1442.0
margin_bottom = 485.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 7 )
texture_click_mask = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="MENU" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 792.0
margin_top = 376.0
margin_right = 1224.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 1 )
text = "Menu"
align = 1
valign = 1

[node name="OVER" type="Label" parent="."]
margin_left = 184.0
margin_top = 32.0
margin_right = 1136.0
margin_bottom = 137.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "FIM DE JOGO
"
align = 1

[node name="SomConfirmar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -13.0

[node name="SomHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -13.0

[node name="Pontos" type="Label" parent="."]
margin_left = 160.0
margin_top = 56.0
margin_right = 1144.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
clip_text = true

[node name="Contorno" type="Sprite" parent="."]
position = Vector2( 347.5, 411.5 )
scale = Vector2( 30.05, 28.45 )
texture = ExtResource( 11 )

[node name="Creditos" type="TextureButton" parent="."]
margin_left = 800.0
margin_top = 480.0
margin_right = 1410.0
margin_bottom = 618.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="TextoCreditos" type="Label" parent="."]
margin_left = 792.0
margin_top = 496.0
margin_right = 1232.0
margin_bottom = 584.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Créditos"
align = 1
valign = 1

[node name="Ranking" type="Label" parent="."]
margin_left = 48.0
margin_top = 128.0
margin_right = 648.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "RANKING"
align = 1
valign = 1

[node name="nomes" type="Label" parent="."]
margin_left = -24.0
margin_top = 216.0
margin_right = 576.0
margin_bottom = 280.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "TOP 5"
align = 1
valign = 1

[node name="dinheiro" type="Label" parent="."]
margin_left = 216.0
margin_top = 216.0
margin_right = 816.0
margin_bottom = 280.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "R$"
align = 1
valign = 1

[node name="Grade" type="Sprite" parent="."]
position = Vector2( 348, 428 )
scale = Vector2( 0.276, 0.379066 )
texture = ExtResource( 12 )

[connection signal="mouse_entered" from="restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="menu" to="." method="_on_menu_mouse_entered"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="mouse_entered" from="Creditos" to="." method="_on_Creditos_mouse_entered"]
[connection signal="pressed" from="Creditos" to="." method="_on_Creditos_pressed"]
